--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=ADLaM+Display&family=Archivo+Black&display=swap" rel="stylesheet">
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
     <body>
         <div id="app" class="container">
@@ -44,15 +45,28 @@
                         </li>
                     </ul>
                 </nav>
-                <a href="database/db.php">VAI</a>
             </header>
             
 
             <main>
                 <div class="container-cards">
-                    <div class="card" v-for="singleFood in foods">
+                    <div class="card" v-for="(singleFood, i) in foods">
                         <div class="img-card">
                             <img :src="singleFood.img" alt="">
+                        </div>
+                        <div class="info">
+                            <h3>
+                                {{ singleFood.name }}
+                            </h3>
+                            <h4>
+                                Type: {{singleFood.type}}
+                            </h4>
+                            <div class="icon">
+                                Category: <i :class="stringToIcon(i)" style="color: #000000;"></i>
+                            </div>
+                            <div class="price">
+                                {{singleFood.price}}€
+                            </div>
                         </div>
                     </div>
                 </div>
