--- a/index.html
+++ b/index.html
@@ -68,6 +68,11 @@
                                 {{singleFood.price}}€
                             </div>
                         </div>
+                        <div class="button">
+                            <button>
+                                Buy
+                            </button>
+                        </div>
                     </div>
                 </div>
             </main>
