--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                                 Category: <i :class="stringToIcon(i)" style="color: #000000;"></i>
                             </div>
                             <div class="price">
-                                {{singleFood.price}}€
+                                {{ formatPrice(singleFood.price) }}€
                             </div>
                         </div>
                         <div class="button">
